apps/prometheus/manifest.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingressroute
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`prometheus.andusystems.com`) && PathPrefix(`/`)"
      kind: Rule
      services:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
          namespace: prometheus
  tls:
    secretName: prometheus-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-ingressroute
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`alertmanager.andusystems.com`) && PathPrefix(`/`)"
      kind: Rule
      services:
        - name: monitoring-kube-prometheus-alertmanager
          port: 9093
          namespace: prometheus
  tls:
    secretName: alertmanager-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingressroute-http
  namespace: prometheus
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`prometheus.andusystems.com`) && PathPrefix(`/`)"
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: prometheus
      services:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
          namespace: prometheus
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: prometheus
spec:
  redirectScheme:
    scheme: https
    permanent: true
